add mn106 + edits

--- a/site/acknowledgments_translation-de-site.json
+++ b/site/acknowledgments_translation-de-site.json
@@ -52,7 +52,7 @@
   "acknowledgments:51": "Beratung und Zusammenarbeit. ",
   "acknowledgments:52": "Aminah Borg-Luck ",
   "acknowledgments:53": "Teammoderation, Textaufbereitung, Forummoderation. ",
-  "acknowledgments:54": "Anāgārikā Pasannā (Michelle Koen) ",
+  "acknowledgments:54": "Ven. Pasanna ",
   "acknowledgments:55": "Forummoderation. ",
   "acknowledgments:56": "Sabbamitta Silashin (Maria Backes) ",
   "acknowledgments:57": "SuttaCentral Voice-Entwicklerteam, Deutsche Übersetzungen, Textvorbereitung, Organisation von Fundraising-Veranstaltungen. ",
