--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "spellright.documentTypes": [
         "markdown",
         "latex",
-        "javascript"
+        "javascript",
+        "json"
     ]
 }
